syntax = "proto3";
message Connect {
    string username = 1;
    string password = 2;
}
service ConnectService {
    rpc connect(Connect) returns (ConnectResponse);
}
message ConnectResponse {
    string message = 1;
    int32 code = 2;
}